# viz-a-synth

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
config/: default-chain.json  layout.json  theme.json
scripts/: README.md  keyboard_to_midi.py  send_scale.py  send_single_note.py
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/Core/: ChainConfiguration.cpp  ChainConfiguration.h  ChainModificationManager.cpp  ChainModificationManager.h  Configuration.cpp  Configuration.h  FrequencyValue.h  ParameterRouter.cpp  ParameterRouter.h  SignalNode.h  Types.h
src/DSP/: OutputNode.h  PolyBLEPOscillator.h  SignalChain.cpp  SignalChain.h  SignalGraph.cpp  SignalGraph.h  SignalNodeFactory.cpp  SignalNodeFactory.h
src/DSP/Filters/: FilterNode.h  StateVariableFilterWrapper.h
src/DSP/Oscillators/: OscillatorSource.h  PolyBLEPOscillator.h
src/UI/: ChainEditor.cpp  ChainEditor.h  LevelMeter.cpp  LevelMeter.h  VirtualKeyboard.cpp  VirtualKeyboard.h
src/UI/Layout/: PanelContainer.cpp  PanelContainer.h
src/Visualization/: EnvelopeVisualizer.cpp  EnvelopeVisualizer.h  Oscilloscope.cpp  Oscilloscope.h  ProbeBuffer.cpp  ProbeBuffer.h  ProbeRegistry.cpp  ProbeRegistry.h  SingleCycleView.cpp  SingleCycleView.h  SpectrumAnalyzer.cpp  SpectrumAnalyzer.h
src/Visualization/Core/: PanelRegistry.cpp  PanelRegistry.h  VisualizationPanel.cpp  VisualizationPanel.h
src/Visualization/FrequencyDomain/: BodePlot.cpp  BodePlot.h  HarmonicView.cpp  HarmonicView.h  SpectrumAnalyzer.cpp  SpectrumAnalyzer.h
src/Visualization/SignalFlow/: SignalFlowView.cpp  SignalFlowView.h
src/Visualization/TimeDomain/: ImpulseResponse.cpp  ImpulseResponse.h  Oscilloscope.cpp  Oscilloscope.h
src/Visualization/ZDomain/: PoleZeroPlot.cpp  PoleZeroPlot.h  TransferFunctionDisplay.cpp  TransferFunctionDisplay.h
